--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                         <div class="description">Cloudy</div>
                     </div>
                     <div class="humidity">Humidity: ${cityes.main.humidity}%</div>
+                    <div class="humidity">Wind Speed: ${cityes.wind.speed}Km/h</div>
                     <div class="wind">UTC:${Math.floor(cityes.timezone / 3600)}hr ${Math.floor((cityes.timezone % 3600) / 60)}min</div>
                     `
             })
